# fathom

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/: index.html
assets/templates/: error.hbs  index.hbs
crates/app-desktop/: Cargo.toml
crates/app-server/: Cargo.toml
crates/app-server/src/: main.rs
crates/base-comm/: Cargo.toml
crates/base-comm/src/: lib.rs  session.rs
crates/comm/: Cargo.toml
crates/comm/src/: session.rs
crates/endpoint-api/: Cargo.toml
crates/endpoint-api/src/: lib.rs
crates/endpoint-web/: Cargo.toml
crates/lib-rpc/: Cargo.toml  build.rs
crates/lib-rpc/proto/: auth.proto
crates/lib-rpc/src/auth/: grpc.rs  mod.rs
crates/rest/: Cargo.toml
crates/rest/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/service-auth/: Cargo.toml
crates/service-auth/src/: lib.rs
crates/service-session/: Cargo.toml
crates/service-session/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  lib.rs
docs/03 Developing Fathom/: book.toml
docs/03 Developing Fathom/src/: 02-building.md  03-architecture.md  README.md  SUMMARY.md
resources/shaders/: fill.vert.glsl  image_upload_uint.comp.glsl  ui.frag.glsl  ui.vert.glsl
resources/web/: hello.hbs
src/: application.rs  array_vec.rs  color.rs  config.rs  draw_command.rs  event_loop.rs  geometry.rs  gui.rs  handle_pool.rs  indexed_object_pool.rs  indexed_store.rs  indexed_tree.rs  lib.rs  main.rs  point.rs  renderer.rs  shapes.rs  ui.rs
src/gfx/: canvas.rs  color.rs  draw_command.rs  geometry.rs  mod.rs  pixel_buffer.rs  vulkan.rs
src/gfx/backend/: mod.rs
src/gfx/backend/vulkan/: api.rs  memory.rs  mod.rs  simple_shader.rs  swapchain.rs
src/gfx/vulkan/: api.rs  geometry.rs  mod.rs  texture.rs  ui_shader.rs  window.rs
src/gfx/vulkan/shaders/: fill.rs  mod.rs
src/gui/: input.rs  mod.rs
src/gui/widgets/: debug.rs  layout.rs  mod.rs  split_panel.rs  tabbed_panel.rs
src/io/: image.rs
src/renderer/: canvas.rs  error.rs  memory.rs  mod.rs  pipeline.rs  swapchain.rs  vertex.rs
src/shell/: event.rs  event_loop.rs  input.rs  mod.rs  shl2.rs  win32.rs
src/shell/shl2/: win32.rs
src/ui/: mod.rs  split_panel.rs  widget.rs
