[package]
name = "fathom"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.37.0", features = ["libloading"] }
once_cell = "1.14.0"
rand = "0.8"
thiserror = "1.0"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]

[build-dependencies]
shaderc = "0.8"
