[package]
name = "app-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
service-auth = { path = "../service-auth" }
lib-rpc = { path = "../lib-rpc", features = ["auth-server"] }

tonic = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
