[package]
name = "endpoint-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base-comm = { path = "../base-comm" }

axum = { version = "0.5", features = ["http2", "ws", "json"] }
axum-extra = { version = "0.3", features = ["cookie-private"] }
axum-macros = "0.2"
base64 = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
