[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
full = ["auth-client", "auth-server"]
auth = []
auth-client = ["auth"]
auth-server = ["auth"]

[dependencies]
rand = "0.8.5"
thiserror = "1.0.31"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tonic-build = "0.7"
