[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rest = { path = "../rest" }
web = { path = "../web" }
session = { path = "../session" }

axum = { version = "0.5", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
