[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
comm = { path = "../comm", features = ["session"] }

axum = { version = "0.5", features = ["http2"] }
handlebars = "4.0"
once_cell = "1.10.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1" }
tracing = "0.1"
